Add depth feature

--- a/test/locales/en.json
+++ b/test/locales/en.json
@@ -1,5 +1,8 @@
 {
     "HELLO": "Hello {{name}}",
     "WORLD": "World",
-    "CATS": "{{0}} cats"
+    "CATS": "{{0}} cats",
+    "CHILD": {
+        "DEMO": "Hello demo"
+    }
 }
